name:                template-composer
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/seraph-b/template-composer#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Bardon
maintainer:          null
copyright:           2020 Martin Bardon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable template-composer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, directory -any, configurator -any, text -any
